# basic_cmake

./: .cmake-format.py  CMakeLists.txt  README.md  run.sh  run_test.sh
src/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  test_some.cpp
